2007-09-18  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_movie_def.cpp
		* gameswf/gameswf_movie_def.h
		* gameswf/gameswf_shape.cpp
		* gameswf/gameswf_sprite_def.cpp
		* gameswf/gameswf_test_ogl.cpp
		Fixed bug concerned with nonexpendable calls of create_movie()
		(thanks Francois Guibert for bug report)
		removed useless show_logo() stuff (it is better to use progress bar),
		USE_NEW_TESSELATOR is switched off (there are some bugs)

2007-09-16  Vitaly Alexeev <tishka92@yahoo.com>

		* base/grid_index.h
		* gameswf/gameswf_shape.cpp
		Fixed memory leaks, USE_NEW_TESSELATOR is switched on
		
2007-09-13  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_value.cpp
		the result of env->get_target() can be NULL
		
2007-09-13  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_object.cpp: fixed memory leak

2007-09-12  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_environment.cpp
		* gameswf/gameswf_environment.h
		Flash 8 can have local zero register
		
2007-09-12  Vitaly Alexeev <tishka92@yahoo.com>

		* base/tu_timer.cpp
		* base/tu_timer.h
		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_as_classes/as_date.cpp
		* gameswf/gameswf_as_classes/as_date.h
		* gameswf/samples/test_date.fla
		* gameswf/samples/test_date.swf
		* gameswf/win32/VC8/libgameswf.vcproj
		Added the part of 'Date' Action Script Class implementation

2007-09-11  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_movie_def.cpp: fixed m_loaded_length,
		it should be increased on 8 (file start position(4) + file header length(4))
		
2007-09-11  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_impl.*: added SetTabIndex tag reader

2007-09-11  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_shape.cpp: commented out 
		#define DEBUG_DISPLAY_SHAPE_PATH
		it is used for debugging only
		* gameswf/gameswf_object.cpp: fixed the target of property